--- a/.hintrc
+++ b/.hintrc
@@ -8,6 +8,13 @@
       {
         "label": "off"
       }
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off",
+        "input-button-name": "off"
+      }
     ]
   }
 }
